exports[`DateTimeDiffFormat component Should display today ago 1`] = `
<span>
  00:00:01 ago
</span>
`;

exports[`DateTimeDiffFormat component Should display today key 1`] = `
<span>
  today
</span>
`;

exports[`DateTimeDiffFormat component Should display today later 1`] = `
<span>
  00:00:01 later
</span>
`;

exports[`DateTimeDiffFormat component Should display today1 1`] = `
<div>
  <span>
    1day ago
  </span>
  <span>
    one day 2 hours ago
  </span>
  <span>
    one day 21 hours ago
  </span>
  <span>
    one day 21 hours ago
  </span>
  <span>
    noooow
  </span>
  <span>
    
  </span>
  <span>
    
  </span>
  <span>
    noooow
  </span>
</div>
`;
